--- a/Profile Card/index.html
+++ b/Profile Card/index.html
@@ -29,7 +29,24 @@
 
             <div class="profile_info">
                 <h2>Prajwal Joshi</h2>
-                <h6>@PrajwalWebDev</h6>
+                <h6>@prajwalwebdev</h6>
+                <div class="logo_div">
+                    <div>
+                        <img src="./STATIC/facebook-svgrepo-com.svg" alt="face_book_logo">
+                    </div>
+                    <div>
+                        <img src="./STATIC/linkedin-svgrepo-com.svg" alt="linkedin_logo">
+                    </div>
+                    <div>
+                        <img src="./STATIC/icons8-twitter.svg" alt="x_logo">
+                    </div>
+                    <div>
+                        <img src="./STATIC/instagram-logo-fill-svgrepo-com.svg" alt="instagram_logo">
+                    </div>
+                    <div>
+                        <img src="./STATIC/dribbble-logo-fill.svg" alt="instagram_logo">
+                    </div>
+                </div>
             </div>
         </div>
     </main>
