--- a/Profile Card/index.html
+++ b/Profile Card/index.html
@@ -28,8 +28,10 @@
             </svg>
 
             <div class="profile_info">
-                <h2>Prajwal Joshi</h2>
-                <h6>@prajwalwebdev</h6>
+                <div>
+                    <h2>Prajwal Joshi</h2>
+                    <h6>@prajwalwebdev</h6>
+                </div>
                 <div class="logo_div">
                     <div>
                         <img src="./STATIC/facebook-svgrepo-com.svg" alt="face_book_logo">
@@ -46,6 +48,12 @@
                     <div>
                         <img src="./STATIC/dribbble-logo-fill.svg" alt="instagram_logo">
                     </div>
+                </div>
+                <h6>Creating brand and communication stratgies, creating visual designs, leading art direction, and
+                    capturing portraits through photography.</h6>
+                <div class="for_buttons">
+                    <button>Follow</button>
+                    <button>Message</button>
                 </div>
             </div>
         </div>
