--- a/Add to Bag/index.html
+++ b/Add to Bag/index.html
@@ -40,13 +40,30 @@
                     <h5>Jordan Dri-FIT NBA Swingman Jersey</h5>
                 </div>
                 <div class="product_amount_details">
-                    <h3>MRP : &#x20B9;</h3>
+                    <h3>MRP : &#x20B9; 6,495.00</h3>
                     <h6>Inclusive of all taxes</h6>
                     <h6>(Also includes all applicable duties)</h6>
                 </div>
+                <div class="size_details">
+                    <div class="horizontal_size_container">
+                        <h3>Select Size</h3>
+                        <h4>
+                            <svg aria-hidden="true" focusable="false" viewBox="0 0 24 24" role="img" width="24px" height="24px" fill="none"><path stroke="currentColor" stroke-width="1.5" d="M21.75 10.5v6.75a1.5 1.5 0 01-1.5 1.5H3.75a1.5 1.5 0 01-1.5-1.5V10.5m3.308-2.25h12.885"></path><path stroke="currentColor" stroke-width="1.5" d="M15.79 5.599l2.652 2.65-2.652 2.653M8.21 5.599l-2.652 2.65 2.652 2.653M17.25 19v-2.5M12 19v-2.5M6.75 19v-2.5"></path></svg>
+                        Size Guide</h4>
+                    </div>
+                    <div class="size_card">
+                        <div>S(40)</div>
+                        <div>M(44)</div>
+                        <div>L(48)</div>
+                        <div>XL(52)</div>
+                        <div>XXL(56)</div>
+                    </div>
+                </div>
+                <div class="button_div">
+                    <button>Add to Bag</button>
+                </div>
              </div>
             <!-- info div -->
-
         </div>
     </main>
 </body>
