--- a/Add to Bag/index.html
+++ b/Add to Bag/index.html
@@ -10,6 +10,10 @@
 
 <body>
     <main>
+        <div class="toast">
+            <p id="toast_name">Added to Bag <span></span></p>
+            <p id="product_name">Jordan Dri-FIT NBA Swingman Jersey</p>
+        </div>
         <div class="img_info_div">
             <!-- image prev left side div -->
             <div class="vertical_multiview">
@@ -66,6 +70,7 @@
             <!-- info div -->
         </div>
     </main>
+    <script src="./script.js"></script>
 </body>
 
 </html>
