Mobile Navigation UI

--- a/Profile Card/index.html
+++ b/Profile Card/index.html
@@ -12,7 +12,7 @@
     <main>
         <div class="wraper">
             <div class="profile_div">
-                <img src="./STATIC/image.png" alt="profile_picture">
+                <img src="./STATIC/image.png" alt="profile">
             </div>
             <svg id="firstSvg" viewBox="0 0 500 150" preserveAspectRatio="none">
                 <path d="M0,100 C150,200 350,0 500,100 L500,00 L0,0 Z" fill="#maroon" />
