Mobile Navigation UI Complete

--- a/Mobile Navigation/index.html
+++ b/Mobile Navigation/index.html
@@ -108,7 +108,7 @@
                     <img src="./STATIC/message_svg.svg" alt="message">
                 </div>
                 <div>
-                    <img src="./STATIC/person_svg2.svg" alt="person">
+                    <img src="./STATIC/setting_svg.svg" alt="person">
                 </div>
             </div>
             <!-- bottom nav div -->
