Contact Us Page 40% Completed

--- a/Contact Us/index.html
+++ b/Contact Us/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us Page</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <main>
         <div class="left_div">
 
         </div>
-        <div class="right_div"></div>
+        <div class="right_div">
+                <form>
+                    <p>Send us a Message</p>
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="Email">
+                    <input type="phone" placeholder="Phone">
+                        <div>
+                            <input type="radio" name="email" id="forEmail">
+                            <label for="forEmail">Email</label>
+                            <input type="radio" name="phone" id="forPhone">
+                            <label for="forPhone">Email</label>
+                        </div>
+                    <textarea placeholder="Message">
+                    </textarea>
+                    <button>Submit</button>
+                </form>
+        </div>
     </main>
 </body>
+
 </html>
