Contact Us Page 70% Completed

--- a/Contact Us/index.html
+++ b/Contact Us/index.html
@@ -11,24 +11,31 @@
 <body>
     <main>
         <div class="left_div">
+            <div>
+                <h1>Contact Us</h1>
+                <p>Get in touch with us! Whether you have questions, feedback, or just want to say hello, we're here you.</p>
+            </div>
+            <div class="location_glower">
 
+            </div>
         </div>
         <div class="right_div">
-                <form>
-                    <p>Send us a Message</p>
-                    <input type="text" placeholder="Name">
-                    <input type="email" placeholder="Email">
-                    <input type="phone" placeholder="Phone">
-                        <div>
-                            <input type="radio" name="email" id="forEmail">
-                            <label for="forEmail">Email</label>
-                            <input type="radio" name="phone" id="forPhone">
-                            <label for="forPhone">Email</label>
-                        </div>
-                    <textarea placeholder="Message">
+            <form>
+                <p>Send us a Message</p>
+                <input type="text" placeholder="Name">
+                <input type="email" placeholder="Email">
+                <input type="phone" placeholder="Phone">
+                <h5>Preferred contact method of communication</h5>
+                <div>
+                    <input type="radio" name="option" id="forEmail">
+                    <label for="forEmail">Email</label>
+                    <input type="radio" name="option" id="forPhone">
+                    <label for="forPhone">Phone</label>
+                </div>
+                <textarea placeholder="Message">
                     </textarea>
-                    <button>Submit</button>
-                </form>
+                <button>Submit</button>
+            </form>
         </div>
     </main>
 </body>
