Contact Us Page 70% Completed

--- a/Contact Us/index.html
+++ b/Contact Us/index.html
@@ -16,7 +16,11 @@
                 <p>Get in touch with us! Whether you have questions, feedback, or just want to say hello, we're here you.</p>
             </div>
             <div class="location_glower">
-
+                <div class="glow">
+                    <h3>Windler, Lockman and McClure</h3>
+                    <h6>3829 N Cole Rd, Boise, illinoise</h6>
+                    <div class="dot"></div>
+                </div>
             </div>
         </div>
         <div class="right_div">
