Contact Us Page Completed

--- a/Contact Us/index.html
+++ b/Contact Us/index.html
@@ -13,14 +13,12 @@
         <div class="left_div">
             <div>
                 <h1>Contact Us</h1>
-                <p>Get in touch with us! Whether you have questions, feedback, or just want to say hello, we're here you.</p>
+                <p>Get in touch with us! Whether you have questions, feedback, or <br>just want to say hello, we're here you.</p>
             </div>
             <div class="location_glower">
-                <div class="glow">
                     <h3>Windler, Lockman and McClure</h3>
                     <h6>3829 N Cole Rd, Boise, illinoise</h6>
-                    <div class="dot"></div>
-                </div>
+                    <div class="glowing_dot"></div>
             </div>
         </div>
         <div class="right_div">
