Recipe App Completed

--- a/Recipe/index.html
+++ b/Recipe/index.html
@@ -28,7 +28,21 @@
         </div>
         <div class="right_div">
             <div class="container_div">
-                <div class="svg_div"></div>
+                <div class="svg_div">
+                    <div class="for_time">
+                        <img src="./STATIC/time.svg" alt="time_svg">
+                        <div>
+                            <h6>TOTAL TIME</h6>
+                            <h5>10 minutes</h5>
+                        </div>
+                    </div>
+                    <div class="for_level">
+                        <img src="./STATIC/time.svg" alt="time_svg">
+                    </div>
+                    <div class="for_budget">
+                        <img src="./STATIC/time.svg" alt="time_svg">
+                    </div>
+                </div>
             </div>
         </div>
     </main>
