Recipe App Completed

--- a/Recipe/index.html
+++ b/Recipe/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <main>
         <div class="product_detail">
@@ -37,14 +39,47 @@
                         </div>
                     </div>
                     <div class="for_level">
-                        <img src="./STATIC/time.svg" alt="time_svg">
+                        <img src="./STATIC/badge.svg" alt="badge_svg">
+                        <div>
+                            <h6>LEVEL</h6>
+                            <h5>medium</h5>
+                        </div>
                     </div>
                     <div class="for_budget">
-                        <img src="./STATIC/time.svg" alt="time_svg">
+                        <img src="./STATIC/budget.svg" alt="budget_svg">
+                        <div>
+                            <h6>BUDGET</h6>
+                            <h5>under ₹ 200</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container_two">
+                    <h5>Sweet Iced Coffe with coconut milk is easy to make and stores well in the fridge.</h5>
+                    <h5>Make a large and save yourself a few trips to the coffe shop.</h5>
+                </div>
+                <!-- INGRADIENTS -->
+                <div class="ingredients_div">
+                    <div>
+                        <input type="checkbox" name="ingradients" id="first_ing">
+                        <label for="first_ing">3 Tablespoon Espresso Coffe Powder</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="ingradients" id="second_ing">
+                        <label for="first_ing">3 Tablespoon Espresso Coffe Powder</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="ingradients" id="third_ing">
+                        <label for="first_ing">3 Tablespoon Espresso Coffe Powder</label>
+                    </div>
+                    <div>
+                        <input type="checkbox" name="ingradients" id="fourth_ing">
+                        <label for="first_ing">3 Tablespoon Espresso Coffe Powder</label>
                     </div>
                 </div>
             </div>
         </div>
     </main>
 </body>
+
 </html>
