Recipe App Completed

--- a/Recipe/index.html
+++ b/Recipe/index.html
@@ -60,21 +60,37 @@
                 </div>
                 <!-- INGRADIENTS -->
                 <div class="ingredients_div">
+                    <h3>INGRADIENTS</h3>
                     <div>
                         <input type="checkbox" name="ingradients" id="first_ing">
                         <label for="first_ing">3 Tablespoon Espresso Coffe Powder</label>
                     </div>
                     <div>
                         <input type="checkbox" name="ingradients" id="second_ing">
-                        <label for="first_ing">3 Tablespoon Espresso Coffe Powder</label>
+                        <label for="second_ing">1 Cup off the Boil Water</label>
                     </div>
                     <div>
                         <input type="checkbox" name="ingradients" id="third_ing">
-                        <label for="first_ing">3 Tablespoon Espresso Coffe Powder</label>
+                        <label for="third_ing">1 Cup Coconut Milk</label>
                     </div>
                     <div>
                         <input type="checkbox" name="ingradients" id="fourth_ing">
-                        <label for="first_ing">3 Tablespoon Espresso Coffe Powder</label>
+                        <label for="fourth_ing">3 Pumps of Sweet Cream</label>
+                    </div>
+                </div>
+
+                   <!-- INSTRUCTION -->
+                   <div class="instruction_div">
+                    <h3>INSTRUCTION</h3>
+                    <div>
+                        <ol>
+                            <li>Boil some water and let sit for 1-2 minutes</li>
+                            <li>Put the Coffe Grounds into a Cafetiere</li>
+                            <li>Boil some water and let sit for 1-2 minutes</li>
+                            <li>Boil some water and let sit for 1-2 minutes</li>
+                            <li>Boil some water and let sit for 1-2 minutes</li>
+                            <li>Boil some water and let sit for 1-2 minutes</li>
+                        </ol>
                     </div>
                 </div>
             </div>
