Recipe App Completed

--- a/Recipe/index.html
+++ b/Recipe/index.html
@@ -85,11 +85,11 @@
                     <div>
                         <ol>
                             <li>Boil some water and let sit for 1-2 minutes</li>
-                            <li>Put the Coffe Grounds into a Cafetiere</li>
-                            <li>Boil some water and let sit for 1-2 minutes</li>
-                            <li>Boil some water and let sit for 1-2 minutes</li>
-                            <li>Boil some water and let sit for 1-2 minutes</li>
-                            <li>Boil some water and let sit for 1-2 minutes</li>
+                            <li>Put the Coffee Grounds into a Cafetiere and Pour in the Water.</li>
+                            <li>Let the Coffee Steep for 5 minutes then Slowely Press Down the Plunger on Your Cafetiere,</li>
+                            <li>Pour the Coffee into a Jug, Allow to Cool then Chill for Several Hours.</li>
+                            <li>Whisk in the Coconut Milk and Condenced Milk and Serve Over Plenty of Ice</li>
+                            <li>This Coffee can be Stored in the Fridge for Up to 5 Days, Shake or Stri again Before Serving.</li>
                         </ol>
                     </div>
                 </div>
