--- a/Image Carousel/index.html
+++ b/Image Carousel/index.html
@@ -9,14 +9,47 @@
 <body>
     <main>
         <div class="image_container_div">
-            <button>Left</button>
+            <button id="leftBtn">Left</button>
             <div class="showing_image">
                 <img src="/Add to Bag/STATIC/image.png" alt="showing_pic">
             </div>
-            <button>Right</button>
+            <button id="rightBtn">Right</button>
         </div>
         <!-- Carousel Div -->
          <div class="carousel_div">
+            <div class="showing_image">
+                <img src="/Add to Bag/STATIC/image.png" alt="showing_pic">
+            </div>
+            <div class="showing_image">
+                <img src="/Add to Bag/STATIC/image.png" alt="showing_pic">
+            </div>
+            <div class="showing_image">
+                <img src="/Add to Bag/STATIC/image.png" alt="showing_pic">
+            </div>
+            <div class="showing_image">
+                <img src="/Add to Bag/STATIC/image.png" alt="showing_pic">
+            </div>
+            <div class="showing_image">
+                <img src="/Add to Bag/STATIC/image.png" alt="showing_pic">
+            </div>
+            <div class="showing_image">
+                <img src="/Add to Bag/STATIC/image.png" alt="showing_pic">
+            </div>
+            <div class="showing_image">
+                <img src="/Add to Bag/STATIC/image.png" alt="showing_pic">
+            </div>
+            <div class="showing_image">
+                <img src="/Add to Bag/STATIC/image.png" alt="showing_pic">
+            </div>
+            <div class="showing_image">
+                <img src="/Add to Bag/STATIC/image.png" alt="showing_pic">
+            </div>
+            <div class="showing_image">
+                <img src="/Add to Bag/STATIC/image.png" alt="showing_pic">
+            </div>
+            <div class="showing_image">
+                <img src="/Add to Bag/STATIC/image.png" alt="showing_pic">
+            </div>
             <div class="showing_image">
                 <img src="/Add to Bag/STATIC/image.png" alt="showing_pic">
             </div>
