Create Account Page UI 100% Done

--- a/Create Account Page/index.html
+++ b/Create Account Page/index.html
@@ -52,6 +52,7 @@
                 <p>Already have an account? <span>Sign In</span></p>
             </div>
             <div class="sec_5">
+                <h5 id="errorMsg">*Spaces Not Allowed</h5>
                 <button>Create account</button>
             </div>
 
