--- a/Create Account Page/index.html
+++ b/Create Account Page/index.html
@@ -35,7 +35,7 @@
                 <div class="email_div">
                     <label for="email">
                         Email
-                        <in  ut id="email" type="email" autocomplete="off" required>
+                        <input  ut id="email" type="email" autocomplete="off" required>
                     </label>
                 </div>
             </div>
