Added border Onfocus and blur

--- a/Create Account Page/index.html
+++ b/Create Account Page/index.html
@@ -20,12 +20,14 @@
                     <label for="name">
                         First Name
                         <input id="name" type="text" autocomplete="off" required>
+                        <img src="./STATIC/card.svg" alt="card_icon_input">
                     </label>
                 </div>
                 <div class="surname_div">
                     <label for="surname">
                         Last Name
                         <input id="surname" type="text" autocomplete="off" required>
+                        <img src="./STATIC/card.svg" alt="card_icon_input">
                     </label>
                 </div>
             </div>
@@ -36,6 +38,7 @@
                     <label for="email">
                         Email
                         <input  ut id="email" type="email" autocomplete="off" required>
+                        <img src="./STATIC/email.svg" alt="email_icon_input">
                     </label>
                 </div>
             </div>
