Password Generator 50% Done

--- a/Password Generator/index.html
+++ b/Password Generator/index.html
@@ -34,6 +34,33 @@
                 </div>
                 <!-- Character Length -->
 
+                <!-- Settings Uppercase -->
+                <div class="setting_div">
+                    <label>
+                        SETTINGS
+                        <div>
+                            <h5>Include uppercase letters</h5>
+                            <input type="checkbox"></input>
+                        </div>
+                        <div>
+                            <h5>Include lowercase letters</h5>
+                            <input type="checkbox"></input>
+                        </div>
+                        <div>
+                            <h5>Include numbers</h5>
+                            <input type="checkbox"></input>
+                        </div>
+                        <div>
+                            <h5>Include symbols</h5>
+                            <input type="checkbox"></input>
+                        </div>
+                    </label>
+                </div>
+                <!-- Settings Uppercase -->
+                <!-- Button Generate Password -->
+                 <button>Generate Passoword</button>
+                <!-- Button Generate Password -->
+
             </div>
         </div>
     </div>
